# codex

./: .cargo-watch.toml  .dockerignore  .gitignore  .ignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Cargo.toml.bak  Cross.toml  DOCKER.md  Dockerfile  Dockerfile.cross  Dockerfile.dev  Dockerfile.release  FEATURE_ANALYZE_DROPDOWNS.md  FRONTEND.md  Makefile  README.md  cliff.toml  codex-sample.yaml  compose.watch.yml  docker-compose.yml  docker-entrypoint.sh  openapi.json
.cargo/: config.toml
crates/codex-api/: Cargo.toml  build.rs
crates/codex-api/src/: db_batch.rs  docs.rs  error.rs  image_limit.rs  lib.rs  web.rs
crates/codex-api/src/extractors/: auth.rs  mod.rs
crates/codex-api/src/middleware/: auth.rs  mod.rs  rate_limit.rs
crates/codex-api/src/observability/: http.rs  providers.rs  trace_fmt.rs
crates/codex-api/src/routes/: mod.rs
crates/codex-cli-common/: Cargo.toml
crates/codex-cli-common/src/: lib.rs
crates/codex-config/: Cargo.toml
crates/codex-config/src/: env_override.rs  lib.rs  loader.rs  types.rs
crates/codex-db/: Cargo.toml
crates/codex-db/src/: connection.rs  lib.rs  test_helpers.rs  trace.rs
crates/codex-db/src/entities/: access_group_oidc_mappings.rs  access_group_sharing_tags.rs  access_groups.rs  book_duplicates.rs  book_metadata.rs  books.rs  collection_series.rs  collections.rs  email_verification_tokens.rs  filter_presets.rs  genres.rs  mod.rs  plugin_data.rs  plugin_failures.rs  plugins.rs  prelude.rs  read_list_books.rs  read_lists.rs  refresh_tokens.rs  release_ledger.rs  release_sources.rs  scheduled_firing_claims.rs  series.rs  series_aliases.rs  series_alternate_titles.rs  series_external_ratings.rs  series_genres.rs  series_metadata.rs  series_sharing_tags.rs  series_tags.rs  settings.rs  sharing_tags.rs  task_metrics.rs  user_access_groups.rs  user_plugin_data.rs  user_plugins.rs  users.rs  want_to_read.rs
crates/codex-db/src/repositories/: access_group.rs  alternate_title.rs  api_key.rs  book.rs  book_covers.rs  book_duplicates.rs  book_external_id.rs  book_external_links.rs  collection.rs  email_verification_token.rs  external_link.rs  external_rating.rs  filter_preset.rs  genre.rs  library.rs  library_jobs.rs  metadata.rs  metrics.rs  mod.rs  oidc_connection.rs  page.rs  plugin_data.rs  plugin_failures.rs  plugins.rs  read_list.rs  read_progress.rs  refresh_token.rs  release_ledger.rs  release_sources.rs  scheduled_firing.rs  series.rs  series_aliases.rs  series_covers.rs  series_duplicates.rs  series_export.rs  series_external_id.rs  series_metadata.rs  series_tracking.rs  settings.rs  sharing_tag.rs  (+10 more)
crates/codex-events/: Cargo.toml
crates/codex-events/src/: broadcaster.rs  lib.rs  task_context.rs  types.rs
crates/codex-migrate/: Cargo.toml
crates/codex-migrate/src/: archive.rs  conn.rs  engine.rs  fk.rs  full_verify.rs  guard.rs  lib.rs  manifest.rs  progress.rs  registry.rs  reroot.rs  verify.rs
crates/codex-migrate/tests/: archive_roundtrip.rs  transfer_roundtrip.rs
crates/codex-models/: Cargo.toml
crates/codex-models/src/: filter.rs  lib.rs  permissions.rs  plugin.rs  preprocessing.rs  release.rs  sort.rs  strategies.rs  task.rs
crates/codex-parsers/: Cargo.toml
crates/codex-parsers/src/: comic_info.rs  error.rs  image_utils.rs  isbn_utils.rs  lib.rs  opf.rs  series_json.rs  traits.rs
crates/codex-scanner/: Cargo.toml
crates/codex-scanner/src/: analyzer.rs  analyzer_queue.rs  detector.rs  library_scanner.rs
crates/codex-scheduler/: Cargo.toml
crates/codex-scheduler/src/: lib.rs
crates/codex-search/: Cargo.toml
crates/codex-search/src/: builder.rs  index.rs  lib.rs  listener.rs
crates/codex-services/: Cargo.toml
crates/codex-services/src/: auth_tracking.rs  book_export_collector.rs  content_filter.rs  filter.rs  idp_bearer.rs  image_decode.rs  lib.rs  metrics.rs  metrics_stub.rs  oidc.rs  pdf_cache.rs  pdf_handle_cache.rs  pdf_handle_cache_subscriber.rs  plugin_metrics.rs  series_export_collector.rs  series_export_writer.rs  settings.rs  task_listener.rs  task_metrics.rs  task_progress_publisher.rs  thumbnail.rs
crates/codex-services/tests/: idp_bearer.rs
crates/codex-tasks/: Cargo.toml
crates/codex-tasks/src/: error.rs  types.rs  worker.rs
crates/codex-utils/: Cargo.toml
crates/codex-utils/src/: cron.rs  deadline.rs  hasher.rs  jwt.rs  lib.rs  natural_sort.rs  password.rs  search.rs  serde.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20260103_000001_create_libraries.rs  m20260103_000002_create_users.rs  m20260103_000003_create_series.rs  m20260103_000004_create_books.rs  m20260103_000005_create_pages.rs  m20260103_000006_create_book_metadata_records.rs  m20260103_000006_create_series_metadata.rs  m20260103_000007_create_genres.rs  m20260103_000007_create_metadata_sources.rs  m20260103_000008_create_read_progress.rs  m20260103_000008_create_tags.rs  m20260103_000009_create_api_keys.rs  m20260103_000009_create_series_alternate_titles.rs  m20260103_000010_add_user_permissions.rs  m20260103_000010_create_series_external_ratings.rs  m20260103_000011_create_series_external_links.rs  m20260103_000012_create_series_covers.rs  m20260103_000013_create_user_series_ratings.rs  m20260103_000014_create_book_metadata.rs  m20260103_000014_create_book_metadata_records.rs  m20260103_000015_create_metadata_sources.rs  m20260103_000016_create_read_progress.rs  m20260103_000017_create_api_keys.rs  m20260103_000018_create_email_verification_tokens.rs  m20260106_000012_create_tasks.rs  m20260106_000019_create_tasks.rs  m20260107_000015_seed_settings.rs  m20260107_000020_create_settings.rs  m20260107_000021_create_settings_history.rs  m20260107_000022_seed_settings.rs  m20260108_000016_create_book_duplicates.rs  m20260108_000023_create_book_duplicates.rs  m20260109_000017_create_task_notification_trigger.rs  m20260109_000024_create_task_notification_trigger.rs  m20260111_000025_create_task_metrics.rs  m20260111_000026_seed_metrics_settings.rs  m20260112_000027_create_user_preferences.rs  m20260112_000028_create_system_integrations.rs  m20260112_000029_create_user_integrations.rs  (+71 more)
(+1765 files in other folders)
