[package]
name = "codex"
version = "1.10.3"
edition = "2024"
description = "A next-generation digital library server for comics, manga, and ebooks"
license = "MIT"
repository = "https://github.com/AshDevFr/codex"
homepage = "https://github.com/AshDevFr/codex"
readme = "README.md"

[[bin]]
name = "codex"
path = "src/main.rs"

[features]
default = ["rar"]
rar = ["dep:unrar"]
embed-frontend = []

[workspace]
members = [".", "migration"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# Configuration
config = "0.14"

# Archive formats
zip = "2.1"
unrar = { version = "0.5", optional = true }

# PDF parsing
lopdf = "0.34"
pdfium-render = "0.8"

# Image processing
image = { version = "0.25", features = ["avif"] }
resvg = "0.44"
jxl-oxide = "0.11"
infer = "0.19"

# Hashing
sha2 = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# XML parsing (for ComicInfo.xml)
quick-xml = { version = "0.36", features = ["serialize"] }

# Regular expressions (for ISBN extraction)
regex = "1.10"

# Templating (for plugin search query templates)
handlebars = "6"

# URL encoding
urlencoding = "2.1"

# File system utilities
walkdir = "2.5"
dirs = "5.0"
globset = "0.4"

# Date/time
chrono = { version = "0.4", features = ["serde"] }
httpdate = "1.0"

# Table formatting
tabled = "0.20"

# Database
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
] }
sea-orm-migration = { version = "1.1", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "sqlx-sqlite",
] }
migration = { path = "migration" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Web framework
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
log = "0.4"                                                         # For sqlx logging level configuration
async-stream = "0.3"
futures = "0.3"
tokio-stream = "0.1"

# Authentication & Security
jsonwebtoken = "9.2"
argon2 = "0.5"
rand = "0.8"
lazy_static = "1.4"
base64 = "0.22"
openidconnect = "3"

# Encryption
aes-gcm = "0.10"

# Email
lettre = { version = "0.11", default-features = false, features = [
    "tokio1",
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
] }

# HTTP Client (for plugin cover downloads and OAuth token exchange)
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }

# API Documentation
utoipa = { version = "5.0", features = [
    "axum_extras",
    "chrono",
    "uuid",
    "yaml",
] }
utoipa-scalar = { version = "0.2", features = ["axum"] }

# Job Scheduling
tokio-cron-scheduler = "0.10"
tokio-util = { version = "0.7", features = ["io"] }

# Concurrent data structures
dashmap = "6.1"

# Static file embedding for frontend
rust-embed = "8.5"
mime_guess = "2.0"

[dev-dependencies]
tempfile = "3.13"
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
hyper = { version = "1.0", features = ["full"] }
serial_test = "3.2"

# =============================================================================
# Development Profile - Optimized for fast incremental builds
# =============================================================================
[profile.dev]
incremental = true
debug = 1          # Reduced from default 2, still allows backtraces

[profile.dev.package."*"]
opt-level = 0 # Keep dependencies unoptimized for fast builds

# =============================================================================
# Distribution Profile - Optimized for release binaries
# =============================================================================
# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.3"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
# =============================================================================
# SELF-HOSTED RUNNER MODIFICATIONS
# =============================================================================
# To revert to paid GitHub runners:
# 1. Uncomment the full targets list below
# 2. Comment out or remove the Linux-only targets line
# 3. Remove both [workspace.metadata.dist.github-custom-runners.*] sections below
# =============================================================================
# ORIGINAL (GitHub runners): Uncomment this line for paid runners
# targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# SELF-HOSTED: Only Linux targets - macOS/Windows require GitHub-hosted runners (paid)
targets = ["x86_64-unknown-linux-gnu"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to enable GitHub Attestations
github-attestations = true
# Allow customized workflow file (we use build.yml instead of release.yml)
allow-dirty = ["ci"]

# =============================================================================
# SELF-HOSTED: Custom runner configurations
# Remove this section when reverting to paid GitHub runners
# =============================================================================

# SELF-HOSTED: Use self-hosted runner for x86_64 Linux builds
[workspace.metadata.dist.github-custom-runners.x86_64-unknown-linux-gnu]
runner = "arc-runner-codex"
features = ["embed-frontend"]
default-features = false
