[package]
name = "codex"
version = "1.29.0"
edition = "2024"
description = "A next-generation digital library server for comics, manga, and ebooks"
license = "AGPL-3.0-or-later"
repository = "https://github.com/AshDevFr/codex"
homepage = "https://github.com/AshDevFr/codex"
readme = "README.md"

[[bin]]
name = "codex"
path = "src/main.rs"

[features]
default = ["rar", "observability"]
rar = ["codex-parsers/rar", "codex-scanner/rar", "codex-services/rar", "codex-tasks/rar"]
embed-frontend = []
observability = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-semantic-conventions",
    "dep:tracing-opentelemetry",
    "dep:axum-tracing-opentelemetry",
    "dep:tonic",
    "dep:sysinfo",
    "codex-services/observability",
]

[workspace]
members = [
    ".",
    "migration",
    "crates/codex-config",
    "crates/codex-events",
    "crates/codex-models",
    "crates/codex-utils",
    "crates/codex-parsers",
    "crates/codex-db",
    "crates/codex-services",
    "crates/codex-search",
    "crates/codex-scanner",
    "crates/codex-tasks",
    "crates/codex-scheduler",
]

# Shared dependencies inherited by workspace members. Only deps that are
# actually consumed by more than one crate live here; the others stay inline in
# the consuming crate's Cargo.toml until they become cross-crate.
[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
utoipa = { version = "5.0", features = [
    "axum_extras",
    "chrono",
    "uuid",
    "yaml",
] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Workspace-internal crates. Declaring them here keeps cross-crate path edges
# in one place so members reference each other via `{ workspace = true }`.
codex-config = { path = "crates/codex-config" }
codex-db = { path = "crates/codex-db" }
codex-events = { path = "crates/codex-events" }
codex-models = { path = "crates/codex-models" }
codex-parsers = { path = "crates/codex-parsers", default-features = false }
codex-scanner = { path = "crates/codex-scanner", default-features = false }
codex-search = { path = "crates/codex-search" }
codex-scheduler = { path = "crates/codex-scheduler" }
codex-services = { path = "crates/codex-services" }
codex-tasks = { path = "crates/codex-tasks", default-features = false }
codex-utils = { path = "crates/codex-utils" }

# Shared dev-dependencies
tempfile = "3.13"
serial_test = "3.2"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = "1.0"
csv = "1.3"

# Configuration (config crate removed - not used, config loaded via serde_yaml)

# Archive formats
zip = "8.1"

# PDF runtime handle cache (pdfium_render types are re-exposed by services)
pdfium-render = { version = "0.8", features = ["sync"] }

# Image processing
image = { version = "0.25", features = ["avif"] }
resvg = "0.47"
jxl-oxide = "0.12"

# Hashing
sha2 = "0.10"
md-5 = "0.10"

# Error handling
anyhow = { workspace = true }
thiserror = "2.0"

# XML parsing (for ComicInfo.xml)
quick-xml = { version = "0.39", features = ["serialize"] }

# Unicode normalization (for accent-insensitive search)
unicode-normalization = "0.1"

# Regular expressions (for ISBN extraction)
regex = "1.10"

# Templating (for plugin search query templates)
handlebars = "6"

# URL encoding
urlencoding = "2.1"

# File system utilities
walkdir = "2.5"
dirs = "6.0"
globset = "0.4"

# Date/time
chrono = { workspace = true }
chrono-tz = "0.10"
httpdate = "1.0"

# Table formatting
tabled = "0.20"

# Database
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
] }
# `sea-orm-migration` lives in codex-db; root reaches the `migration` crate
# directly for the oidc handler's one-off Migrator::up call.
migration = { path = "migration" }
codex-config = { workspace = true }
codex-db = { workspace = true }
codex-events = { workspace = true }
codex-models = { workspace = true }
codex-parsers = { workspace = true }
codex-scanner = { workspace = true }
codex-search = { workspace = true }
codex-scheduler = { workspace = true }
codex-services = { workspace = true }
codex-tasks = { workspace = true }
codex-utils = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

# Web framework
axum = { version = "0.8", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "catch-panic"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
log = "0.4"                                                         # For sqlx logging level configuration

# OpenTelemetry (optional, gated by `observability` feature)
opentelemetry = { version = "0.32", optional = true }
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio", "trace", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.32", default-features = false, features = [
    "grpc-tonic",
    "http-proto",
    "http-json",
    # Blocking HTTP client is intentional: the OTel SDK 0.32 batch processor
    # runs export on a dedicated std::thread that has no async runtime
    # attached. An async reqwest client would panic on first export. The
    # blocking client only blocks the batch thread, not the server runtime.
    "reqwest-blocking-client",
    "trace",
    "metrics",
], optional = true }
opentelemetry-semantic-conventions = { version = "0.32", optional = true }
tracing-opentelemetry = { version = "0.33", optional = true }
axum-tracing-opentelemetry = { version = "0.33", optional = true }
# Re-used via opentelemetry-otlp's grpc-tonic feature; declared here so
# metadata helpers can use MetadataKey/MetadataValue types directly.
tonic = { version = "0.14", default-features = false, optional = true }
# Process-level metrics (CPU, memory). `opentelemetry-system-metrics` would
# do this for us but is pinned to opentelemetry 0.31, one minor behind our
# 0.32. Rolling the few callbacks we need against sysinfo directly is ~30 lines
# and keeps the toolchain consistent.
sysinfo = { version = "0.39", default-features = false, features = ["system"], optional = true }
async-stream = "0.3"
futures = "0.3"
tokio-stream = "0.1"

# Authentication & Security
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
argon2 = "0.5"
rand = "0.10"
lazy_static = "1.4"
base64 = "0.22"
openidconnect = "4"

# Encryption
aes-gcm = "0.10"

# Email
lettre = { version = "0.11", default-features = false, features = [
    "tokio1",
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
] }

# HTTP Client (for plugin cover downloads and OAuth token exchange)
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "json",
    "form",
] }

# API Documentation
utoipa = { workspace = true }
utoipa-scalar = { version = "0.3", features = ["axum"] }

# Job Scheduling
cron = "0.13"
tokio-cron-scheduler = "0.15"
tokio-util = { version = "0.7", features = ["io"] }

# Concurrent data structures
dashmap = "6.1"
lru = "0.18"
parking_lot = "0.12"

# Fuzzy matching (in-memory search index)
nucleo-matcher = "0.3"

# Static file embedding for frontend
rust-embed = "8.5"
mime_guess = "2.0"

[dev-dependencies]
tempfile = { workspace = true }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = { version = "1.0", features = ["full"] }
serial_test = { workspace = true }
tracing-test = "0.2"
# Enables codex_db::test_helpers (gated behind the `test-utils` feature) so
# the root crate's `#[cfg(test)]` blocks and the `tests/` integration suite
# can mint SQLite test databases.
codex-db = { workspace = true, features = ["test-utils"] }
# Used by tests/common/files.rs to mint PDF fixtures. The runtime PDF
# rendering path lives in codex-parsers; tests reach for lopdf directly to
# craft byte-level inputs.
lopdf = "0.39"
# Enable the SDK's `testing` feature for the in-memory metric exporter used
# in observability::metrics tests. Dev-only; no production impact.
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio", "trace", "metrics", "testing"] }

# =============================================================================
# Development Profile - Optimized for fast incremental builds
# =============================================================================
[profile.dev]
incremental = true
debug = 1          # Reduced from default 2, still allows backtraces

[profile.dev.package."*"]
opt-level = 0 # Keep dependencies unoptimized for fast builds

# =============================================================================
# Distribution Profile - Optimized for release binaries
# =============================================================================
# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.3"
# CI backends to support
ci = "github"
# Features to pass to cargo build
features = ["embed-frontend"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to enable GitHub Attestations
github-attestations = true
# Allow customized workflow file (we use build.yml instead of release.yml)
allow-dirty = ["ci"]
