[package]
name = "codex"
version.workspace = true
edition.workspace = true
description = "A next-generation digital library server for comics, manga, and ebooks"
license = "AGPL-3.0-or-later"
repository = "https://github.com/AshDevFr/codex"
homepage = "https://github.com/AshDevFr/codex"
readme = "README.md"

[[bin]]
name = "codex"
path = "src/main.rs"

[features]
default = ["rar", "observability"]
# Forwards CBR support down through the dependency stack. Every workspace
# member that touches archive parsing owns its own `rar` feature; this is the
# top-level switch.
rar = [
    "codex-api/rar",
    "codex-parsers/rar",
    "codex-scanner/rar",
    "codex-services/rar",
    "codex-tasks/rar",
]
# Embeds the React frontend assets into the binary at build time.
embed-frontend = ["codex-api/embed-frontend"]
# Enables the OpenTelemetry HTTP/runtime instrumentation in codex-api.
# Root composes the OTel `tracing-opentelemetry` bridge layer in init_tracing,
# so the dep is enabled here too.
observability = ["codex-api/observability", "codex-cli-common/observability"]

[workspace.package]
# Single source of truth for crate versions. `release-prepare` rewrites this
# line; every workspace member inherits via `version.workspace = true`.
version = "1.39.5"
edition = "2024"

[workspace]
members = [
    ".",
    "migration",
    "crates/codex-config",
    "crates/codex-events",
    "crates/codex-models",
    "crates/codex-utils",
    "crates/codex-parsers",
    "crates/codex-db",
    "crates/codex-services",
    "crates/codex-search",
    "crates/codex-scanner",
    "crates/codex-tasks",
    "crates/codex-scheduler",
    "crates/codex-api",
    "crates/codex-cli-common",
]

# Shared dependencies inherited by workspace members. Only deps that are
# actually consumed by more than one crate live here; the others stay inline in
# the consuming crate's Cargo.toml until they become cross-crate.
[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
utoipa = { version = "5.0", features = [
    "axum_extras",
    "chrono",
    "uuid",
    "yaml",
] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Workspace-internal crates. Declaring them here keeps cross-crate path edges
# in one place so members reference each other via `{ workspace = true }`.
codex-api = { path = "crates/codex-api", default-features = false }
codex-cli-common = { path = "crates/codex-cli-common", default-features = false }
codex-config = { path = "crates/codex-config" }
codex-db = { path = "crates/codex-db" }
codex-events = { path = "crates/codex-events" }
codex-models = { path = "crates/codex-models" }
codex-parsers = { path = "crates/codex-parsers", default-features = false }
codex-scanner = { path = "crates/codex-scanner", default-features = false }
codex-search = { path = "crates/codex-search" }
codex-scheduler = { path = "crates/codex-scheduler" }
codex-services = { path = "crates/codex-services" }
codex-tasks = { path = "crates/codex-tasks", default-features = false }
codex-utils = { path = "crates/codex-utils" }

# Shared dev-dependencies
tempfile = "3.13"
serial_test = "3.2"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Workspace-inherited
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }

# Workspace-internal
codex-api = { workspace = true }
codex-cli-common = { workspace = true }
codex-config = { workspace = true }
codex-db = { workspace = true }
codex-events = { workspace = true }
codex-models = { workspace = true }
codex-parsers = { workspace = true }
codex-scanner = { workspace = true }
codex-search = { workspace = true }
codex-scheduler = { workspace = true }
codex-services = { workspace = true }
codex-tasks = { workspace = true }
codex-utils = { workspace = true }

# Serialization (commands use json output formats)
serde_json = "1.0"

# Database (commands inspect DatabaseBackend at runtime to log the active
# driver in init_database).
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
] }

# Random for seed defaults
rand = "0.10"

# Async helpers (commands/serve.rs uses tokio_util::sync::CancellationToken)
tokio-util = { version = "0.7", features = ["io"] }

# Tabular output (commands/tasks.rs admin views)
tabled = "0.20"

# Axum (`axum::serve` in commands/serve.rs to bind the router on the listener).
axum = { version = "0.8", features = ["multipart"] }

# Recursive file walking (commands/scan.rs)
walkdir = "2.5"

[dev-dependencies]
tempfile = { workspace = true }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = { version = "1.0", features = ["full"] }
axum = { version = "0.8", features = ["multipart"] }
image = { version = "0.25", features = ["avif"] }
zip = "8.1"
migration = { path = "migration" }
serial_test = { workspace = true }
tracing-test = "0.2"
# Signs RS256 fixture tokens for the IdP bearer API tests; same version and
# backend as codex-utils/codex-services.
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
# Enables codex_db::test_helpers (gated behind the `test-utils` feature) so
# the root crate's integration suite under `tests/` can mint SQLite test
# databases.
codex-db = { workspace = true, features = ["test-utils"] }
# Tests assert against the api crate's behaviour via `codex::api::*`. Pull
# codex-api in directly so `[features]` propagation works for tests that need
# the `observability` feature surface (see tests/api/observability.rs).
codex-api = { workspace = true, features = ["observability"] }
# Used by tests/common/files.rs to mint PDF fixtures. The runtime PDF
# rendering path lives in codex-parsers; tests reach for lopdf directly to
# craft byte-level inputs.
lopdf = "0.39"
# Enable the SDK's `testing` feature for the in-memory metric exporter used
# in observability tests reachable via `codex::observability`.
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio", "trace", "metrics", "testing"] }
# Used directly by tests/api/auth.rs (Basic-auth header construction) and a
# couple of OPDS tests.
base64 = "0.22"
# Used by tests/api/observability.rs to assert that the registered OTel trace
# context flows into request handlers.
opentelemetry = "0.32"
tracing-opentelemetry = "0.33"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# =============================================================================
# Development Profile - Optimized for fast incremental builds
# =============================================================================
[profile.dev]
incremental = true
debug = 1          # Reduced from default 2, still allows backtraces

[profile.dev.package."*"]
opt-level = 0 # Keep dependencies unoptimized for fast builds

# =============================================================================
# Distribution Profile - Optimized for release binaries
# =============================================================================
# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.3"
# CI backends to support
ci = "github"
# Features to pass to cargo build
features = ["embed-frontend"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to enable GitHub Attestations
github-attestations = true
# Allow customized workflow file (we use build.yml instead of release.yml)
allow-dirty = ["ci"]
