[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
  "runtime-tokio-native-tls",  # `ASYNC_RUNTIME` feature
  "sqlx-postgres",             # `DATABASE_DRIVER` feature
  "sqlx-sqlite",               # `DATABASE_DRIVER` feature for SQLite
  "with-uuid",                 # UUID support
  "with-chrono",               # Chrono DateTime support
]
