[package]
name = "codex-events"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "codex_events"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = "1.0"
