[package]
name = "codex-models"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
name = "codex_models"
path = "src/lib.rs"

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
utoipa = { workspace = true }
uuid = { workspace = true }
lazy_static = "1.4"
