[package]
name = "codex-scheduler"
version.workspace = true
edition.workspace = true
publish = false

[lib]
name = "codex_scheduler"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

codex-db = { workspace = true }
codex-models = { workspace = true }
codex-scanner = { workspace = true }
codex-services = { workspace = true }
codex-tasks = { workspace = true }
codex-utils = { workspace = true }

chrono-tz = "0.10"
futures = "0.3"
serde_json = "1.0"
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
] }
tokio-cron-scheduler = "0.15"

[dev-dependencies]
tempfile = { workspace = true }
codex-db = { workspace = true, features = ["test-utils"] }
