[package]
name = "codex-search"
version = "0.0.0"
edition = "2024"
publish = false

[lib]
name = "codex_search"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

codex-db = { workspace = true }
codex-events = { workspace = true }
codex-utils = { workspace = true }

# In-memory fuzzy index
nucleo-matcher = "0.3"
parking_lot = "0.12"
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
] }
serde_json = "1.0"
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
tempfile = { workspace = true }
codex-db = { workspace = true, features = ["test-utils"] }
